refatorando as classes por meio da JetBrains AI Assistant